--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       # run tests!
       - run: yarn test
       - setup_remote_docker
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD;lll
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run:
           name: "Build docker image and push to docker hub"
           command: |
@@ -41,5 +41,19 @@ jobs:
             docker build -t warisr/example-nodejs-circle:${CIRCLE_SHA1} .
             docker push warisr/example-nodejs-circle:latest
             docker push warisr/example-nodejs-circle:${CIRCLE_SHA1}
+      - run:
+          name: "Call to deploy"
+          command: |
+            docker run --rm -rt \
+              -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
+              -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
+              -e CATTLE_URL="$CATTLE_URL" \
+              eltweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
+              --imageUuid 'docker/warisr/example-nodejs-circle:latest' \
+              --batch_size 3 --start_first \
+              --auto_complete --time_out 600 \
+              /
       - run: echo Done
 
+
+      1DF0757ADC592C030A58
