--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
                 -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
                 -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
                 -e CATTLE_URL="$CATTLE_URL" \
-                eltweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
+                etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
                 --imageUuid 'docker/warisr/example-nodejs-circle:latest' \
                 --batch_size 3 --start_first \
                 --auto_complete --time_out 600 \
