--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,6 @@ jobs:
                 etlweather/gaucho upgrade $RANCHER_EXAMPLE_NODEJS \
                 --imageUuid 'docker/warisr/example-nodejs-circle:latest' \
                 --batch_size 3 --start_first \
-                --auto_complete --time_out 600 \
+                --auto_complete --timeout 600 \
                 /
       - run: echo Done
